# OpenCSD

./: .gitignore  CMakeLists.txt  build.sh
cmake_simple_example/: CMakeLists.txt  Makefile
cmake_simple_example/BUILDER/: CMakeLists.txt  Makefile
cmake_simple_example/app/: logging_example.cpp
cmake_simple_example/lib/: logger.cpp  logger.h
decoder/include/common/: trc_gen_elem.h
decoder/include/opencsd/: ocsd_if_types.h
decoder/source/: trc_gen_elem.cpp
decoder/source/c_api/: ocsd_c_api.cpp
decoder/source/etmv4/: trc_pkt_decode_etmv4i.cpp  trc_pkt_proc_etmv4i.cpp
decoder/source/mem_acc/: trc_mem_acc_bufptr.cpp  trc_mem_acc_mapper.cpp
decoder/tests/source/: c_api_pkt_print_test.c  mem_buff_demo.cpp
jopencsd/: CMakeLists.txt  Callback.h  Callback2.h  DecodedTraceCallback.h  MemAccCallback.h  jopencsd.i
my_app/: CMakeLists.txt  etmv4.cpp  etmv4_c_api.cpp
my_app/MPS2_M4_trace/dump/: contents.ini  trace.ini
my_app/MPS2_M4_trace/snapshot/: DSTREAM.bin.bk  device1.ini  device2.ini  snapshot.ini  trace.ini
my_app/c_api_full_decode/: CMakeLists.txt  c_api_full_decode.cpp
my_app/c_api_full_decode_callbacks/: CMakeLists.txt  c_api_full_decode_callbacks.cpp
my_app/c_api_packet_printer/: CMakeLists.txt  c_api_packet_printer.cpp
my_app/java/app/: build.sh  runme.java  trc_pkt_types_etmv4.i
my_app/java_etmv4_c_api/: Callback.h  Callback2.h  build.sh  jopencsd.i  runme.java
my_app/jnropencsd/: pom.xml
my_app/jnropencsd/src/main/java/rhys/: App.java
my_app/simple_juno_trace/: decode.txt
my_app/simple_juno_trace/etm_dump/: trace.ini
my_app/simple_juno_trace/juno_image_simple/: Makefile  Readme.txt  a64_main.S  juno_image_simple.axf  scatter.scat
my_app/simple_juno_trace/juno_snapshot/: device1.ini  device2.ini  trace.ini
my_app/simple_juno_trace/snapshot_script/: snapshot.py  tdump.py  tracedump.py
my_app/simple_juno_trace/updated_juno_snapshot/: DSTREAM.bin.bk  device1.ini  device2.ini
my_app/simple_juno_trace/updated_juno_snapshot_trace/: README.txt  contents.ini  trace.ini
